13.11.19 z-index fixed

--- a/resources/assets/styles/common/main-form.scss
+++ b/resources/assets/styles/common/main-form.scss
@@ -5,7 +5,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 998;
+  z-index: 10;
   background-color: #fff;
   transition: 0.3s;
   border-top: solid 1px  rgba(183, 184, 199, 0.24);
