--- a/resources/assets/styles/common/main-search.scss
+++ b/resources/assets/styles/common/main-search.scss
@@ -5,7 +5,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 9;
+  z-index: 12;
   transition: 0.3s;
   display: flex;
   background-size: cover;
