--- a/resources/assets/styles/layouts/index.scss
+++ b/resources/assets/styles/layouts/index.scss
@@ -177,7 +177,7 @@
         content: url("images/home/dots-top.svg");
         top: -174px;
         left: 15px;
-        z-index: 0;
+        z-index: 11;
         @media (max-width: 991px) {
           display: none;
         }
